Added SizPos version for GRU
Signed-off-by: Alexis Balayre <60859013+AlexisBal@users.noreply.github.com>

--- a/report/425500_Thesis_Report.tex
+++ b/report/425500_Thesis_Report.tex
@@ -284,11 +284,7 @@ refuelling systems. This framework is designed to handle the small pixel ratio
 of refuelling ports efficiently, thus optimising the detection and tracking
 process. The use of Extended Kalman Filtering (EKF) further refines
 predictions, ensuring real-time adaptability and accuracy, which is crucial for
-practical applications in busy airport environments. In addition, this thesis
-contributes to the creation and use of a comprehensive dataset that includes
-various scenarios and conditions. The dataset is meticulously annotated to
-provide high quality training and test data. Data augmentation strategies are
-also employed to improve model robustness and generalisation.
+practical applications in busy airport environments. 
 
 \section{Thesis Layout}
 The following sections of this thesis provide a detailed exploration and
