--- a/report/CUCitations.bib
+++ b/report/CUCitations.bib
@@ -5,13 +5,6 @@
   url     = {https://www.aircraftengineer.info/aircraft-refueling-procedures},
   year    = {2018}
 }
-@inproceedings{,
-  journal = {SKYbrary Aviation Safety},
-  month   = {5},
-  title   = {Refuelling with Passengers on Board},
-  url     = {https://www.skybrary.aero/index.php/Refuelling_with_Passengers_on_Board},
-  year    = {2019}
-}
 @article{AARBinocularVision,
   abstract = {In this paper, a visual navigation method based on binocular vision and a deep learning approach is proposed to solve the navigation problem of the unmanned aerial vehicle autonomous aerial refueling docking process. First, to meet the requirements of high accuracy and high frame rate in aerial refueling tasks, this paper proposes a single-stage lightweight drogue detection model, which greatly increases the inference speed of binocular images by introducing image alignment and depth-separable convolution and improves the feature extraction capability and scale adaptation performance of the model by using an efficient attention mechanism (ECA) and adaptive spatial feature fusion method (ASFF). Second, this paper proposes a novel method for estimating the pose of the drogue by spatial geometric modeling using optical markers, and further improves the accuracy and robustness of the algorithm by using visual reprojection. Moreover, this paper constructs a visual navigation vision simulation and semi-physical simulation experiments for the autonomous aerial refueling task, and the experimental results show the following: (1) the proposed drogue detection model has high accuracy and real-time performance, with a mean average precision (mAP) of 98.23% and a detection speed of 41.11 FPS in the embedded module; (2) the position estimation error of the proposed visual navigation algorithm is less than ±0.1 m, and the attitude estimation error of the pitch and yaw angle is less than ±0.5°; and (3) through comparison experiments with the existing advanced methods, the positioning accuracy of this method is improved by 1.18% compared with the current advanced methods.},
   author   = {Kun Gong and Bo Liu and Xin Xu and Yuelei Xu and Yakun He and Zhaoxiang Zhang and Jarhinbek Rasol},
@@ -1208,7 +1201,7 @@
   url = {https://www.wpafb.af.mil/News/Article-Display/Article/400022/lab-demonstrates-robotic-ground-refueling-of-aircraft/},
   year = {2010},
   month = oct,
-  note = {Accessed: 2024-07-24},
+  note = {Accessed: 2024-06-24},
   organization = {Materials and Manufacturing, Wright-Patterson Air Force Base}
 }
 
@@ -1219,14 +1212,14 @@
   month = {July 18},
   publisher = {AMRDEC Public Affairs},
   url = {https://www.army.mil/article/190980/concept_demonstration_explores_robotic_aviation_refueling_system},
-  note = {Accessed: 2024-07-24}
+  note = {Accessed: 2024-06-24}
 }
 
 @misc{AR3P2020,
     title = {AR3P Program Background (2017-2019) and Robotic Hot Refueling Demonstrations (Sep-Oct 2020)},
     author = {Army Futures Command (AFC) CCDC Aviation \& Missile Center (AvMC)},
     year = {2020},
-    note = {Accessed: 2024-07-24},
+    note = {Accessed: 2024-06-24},
     organization = {Army Futures Command (AFC) CCDC Aviation \& Missile Center (AvMC)},
     url = {hhttps://www.denix.osd.mil/ndcee/denix-files/sites/44/2023/09/EXSUM-AR3P-Robotic-Refueling-K-MAX-and-S-70-Sep_Oct-2020-v9.pdf},
     abstract = {The Autonomous & Robotic Remote Refuel Point (AR3P) is a science \& technology (S\&T) program previously executed by the Army Futures Command (AFC) CCDC Aviation \& Missile Center (AvMC). Funding sources include the OSD Coalition Warfare Program (US-UK), OSD Operational Energy Capability Improvement Fund (OECIF), DoD Rapid Innovation Fund (RIF), and Small Business Innovation Research. The AR3P system was demonstrated during the Maneuver Support, Sustainment, and Protection Integration Exercise (MSSPIX) at Fort Pickett VA in Sep 2020, focusing on autonomous refueling of a tactical helicopter.}
@@ -1239,4 +1232,36 @@
   year = {2024},
   note = {Accessed: 2024-06-24}
 
+}
+
+@misc{ImageRefueling,
+  author = {Joanna Bailey},
+  title = {What Is Fuel Tankering And Why Should You Care?}, 
+  url = {https://simpleflying.com/fuel-tankering/},
+  year = {2019},
+  note = {Accessed: 2024-06-24}
+}
+
+@misc{LearnOpenCVYOLOv10,
+  author = {Ankan Ghosh},
+  title = {YOLOv10: The Dual-Head OG of YOLO Series},
+  url = {https://learnopencv.com/yolov10/},
+  year = {2024},
+  note = {Accessed: 2024-06-24}
+}
+
+@article{DBLP:journals/corr/abs-2010-10270,
+  author       = {Smail Ait Bouhsain and
+                  Saeed Saadatnejad and
+                  Alexandre Alahi},
+  title        = {Pedestrian Intention Prediction: {A} Multi-task Perspective},
+  journal      = {CoRR},
+  volume       = {abs/2010.10270},
+  year         = {2020},
+  url          = {https://arxiv.org/abs/2010.10270},
+  eprinttype    = {arXiv},
+  eprint       = {2010.10270},
+  timestamp    = {Mon, 26 Oct 2020 15:39:44 +0100},
+  biburl       = {https://dblp.org/rec/journals/corr/abs-2010-10270.bib},
+  bibsource    = {dblp computer science bibliography, https://dblp.org}
 }
